--- a/Administrativos/AdministrarTu/AdministrarTu.css
+++ b/Administrativos/AdministrarTu/AdministrarTu.css
@@ -1,172 +1,432 @@
-html{
-    height: 100%;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #FFEFD5;
-    margin: 0;
-    padding: 0;
-
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-}
-/*Estilo del contenedor principal (wrapper):*/
-.wrapper {
-    background-color: #ffffff;
-    padding: 15px;
-    margin: 15px;
-    border-radius: 5px;
-    clear: both;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-/*Estilo del encabezado (header):*/
-header {
-    background-color: #ffffff;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 0.1px solid #b6b6b6;
-}
-
-header h1 {
-    margin: 0;
-    font-size: 16px;
-    color: #000;
-}
-/*Estilo del botón de cierre de sesión (logout):*/
-header .logout {
-    background-color: #004494;
-    color: white;
-    padding: 10px 15px;
-    text-decoration: none;
-    border-radius: 10px;
-    transition: background-color 0.5s ease; /* Add the transition property */
-    position: relative; /* Set the position to relative for the pseudo-elements */
-    overflow: hidden;
-}
-
-header .logout::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    border-radius: 20px;
-    transition: transform 0.5s ease;
-    opacity: 0.1;
-}
-
-header .logout:hover {
-    background-color: #003B7A;
-}
-
-header .logout:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
-/*Estilo del contenedor (container):*/
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 0px;
-}
-/*Estilo del menú (menu):*/
-.menu {
-    display: flex;
-    flex-direction: column;
+@media (min-width: 768px) {
+    html{
+        height: 100%;
+    }
     
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #FFEFD5;
+        margin: 0;
+        padding: 0;
+    
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+    }
+    /*Estilo del contenedor principal (wrapper):*/
+    .wrapper {
+        background-color: #ffffff;
+        padding: 15px;
+        margin: 15px;
+        border-radius: 5px;
+        clear: both;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+    /*Estilo del encabezado (header):*/
+    header {
+        background-color: #ffffff;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 0.1px solid #b6b6b6;
+    }
+    
+    header h1 {
+        margin: 0;
+        font-size: 16px;
+        color: #000;
+    }
+    /*Estilo del botón de cierre de sesión (logout):*/
+    header .logout {
+        background-color: #004494;
+        color: white;
+        padding: 10px 15px;
+        text-decoration: none;
+        border-radius: 10px;
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        overflow: hidden;
+    }
+    
+    header .logout::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    header .logout:hover {
+        background-color: #003B7A;
+    }
+    
+    header .logout:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    /*Estilo del contenedor (container):*/
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 0px;
+    }
+    /*Estilo del menú (menu):*/
+    .menu {
+        display: flex;
+        flex-direction: column;
+        
+    }
+    
+    .menu button {
+        background-color: #004494;
+        color: white;
+        border: none;
+        padding: 35px 50px;
+        margin: 10px 0;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 10px;
+        text-align: center;
+    
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        overflow: hidden;
+    }
+    
+    .menu button::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    .menu button:hover {
+        background-color: #003B7A;
+    }
+    
+    .menu button:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    /*Estilo del logo:*/
+    .logo {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        /*Mover imagen derecha: margin-left: 890px;*/
+    }
+    
+    .logo img {
+        height: auto;
+        width: 200%;
+    }
+    
+    
+    header .In {
+        background-color: #FFEFD5;
+        color: black;
+        padding: 10px 15px;
+        text-decoration: none;
+        border-radius: 10px;
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        left: 600px;
+        overflow: hidden;
+    }
+    
+    header .In::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    header .In:hover {
+        background-color: #FFEFD5;
+    }
+    
+    header .In:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
 }
 
-.menu button {
-    background-color: #004494;
-    color: white;
-    border: none;
-    padding: 35px 50px;
-    margin: 10px 0;
-    font-size: 18px;
-    cursor: pointer;
-    border-radius: 10px;
-    text-align: center;
+@media (max-width: 768px) {
+    html {
+        height: 100%;
+    }
+    
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #FFEFD5;
+        margin: 0;
+        padding: 0;
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    /* Estilo del contenedor principal (wrapper): */
+    .wrapper {
+        background-color: #ffffff;
+        padding: 15px;
+        margin: 15px;
+        border-radius: 5px;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    /* Estilo del encabezado (header): */
+    header {
+        background-color: #ffffff;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 0.1px solid #b6b6b6;
+    }
+    
+    header h1 {
+        margin: 0;
+        font-size: 16px;
+        color: #000;
+    }
+    
+    /* Estilo del botón de cierre de sesión (logout): */
+    header .logout {
+        background-color: #004494;
+        color: white;
+        padding: 10px 10px;
+        text-decoration: none;
+        border-radius: 20px;
+        transition: background-color 0.5s ease;
+        position: relative;
+        overflow: hidden;
+    }
+    
+    header .logout::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    header .logout:hover {
+        background-color: #003B7A;
+    }
+    
+    header .logout:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    
+    /* Estilo del contenedor (container): */
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 0px;
+        display: none;
+    }
+    
+    /* Estilo del menú (menu): */
+    .menu {
+        display: flex;
+        flex-direction: column;
+        background-color: #FFEFD5;
+        padding: 25px;
+        position: fixed;
+    }
+    
+    .menu button {
+        background-color: #004494;
+        color: white;
+        border: none;
+        padding: 25px 20px;
+        margin: 10px 0;
+        font-size: 15px;
+        cursor: pointer;
+        border-radius: 20px;
+        text-align: center;
+        transition: background-color 0.5s ease;
+        position: relative;
+        overflow: hidden;
+    }
+    
+    .menu button::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    .menu button:hover {
+        background-color: #003B7A;
+    }
+    
+    .menu button:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    
+    /* Estilo del logo: */
+    .logo {
+        display: flex;
+        align-items: center;
+        justify-content: center; /* Centrar horizontalmente */
+        margin-top: 20px; /* Espacio adicional arriba */
+    }
+    
+    .logo img {
+        display: none;
+    }
+    
+    /* Estilo del título principal */
+    header h1 {
+        font-size: 14px; /* Tamaño de fuente ajustado */
+        text-align: center; /* Centrar el texto */
+        flex: 1; /* Tomar todo el espacio disponible */
+        color: #004494; /* Color del texto */
+        margin-left: 10px; /* Espacio a la izquierda */
+        margin-right: 10px; /* Espacio a la derecha */
+    }
+    
+    /* Estilo del botón de menú: */
+    .menu-toggle {
+        background-color: #004494;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        margin: 10px;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 20px;
+        text-align: center;
+        transition: background-color 0.5s ease;
+        position: relative;
+        overflow: hidden;
+        align-self: center; /* Centrar el botón de menú */
+    }
 
-    transition: background-color 0.5s ease; /* Add the transition property */
-    position: relative; /* Set the position to relative for the pseudo-elements */
-    overflow: hidden;
-}
+    .menu-toggle::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
 
-.menu button::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    border-radius: 20px;
-    transition: transform 0.5s ease;
-    opacity: 0.1;
-}
+    .menu-toggle:hover {
+        background-color: #003B7A;
+    }
 
-.menu button:hover {
-    background-color: #003B7A;
-}
+    .menu-toggle:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
 
-.menu button:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
-/*Estilo del logo:*/
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    /*Mover imagen derecha: margin-left: 890px;*/
-}
+    .menu.hidden{
+        display: none;
+    }
 
-.logo img {
-    height: auto;
-    width: 200%;
-}
+    /* Estilos para el icono del menú */
+    .menu-icon {
+        width: 35px; /* Puedes ajustar este valor según tus necesidades */
+        height: 25px; /* Puedes ajustar este valor según tus necesidades */
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+        border: none;
+        background-color: white;
+    }
 
+    .menu-icon::before,
+    .menu-icon::after,
+    .menu-icon div {
+        content: '';
+        width: 100%;
+        height: 4px; /* Puedes ajustar este valor según tus necesidades */
+        background-color: #003366; /* Color azul oscuro */
+        border-radius: 2px; /* Opcional: para bordes redondeados */
+        border: none;
+    }
 
-header .In {
-    background-color: #FFEFD5;
-    color: black;
-    padding: 10px 15px;
-    text-decoration: none;
-    border-radius: 10px;
-    transition: background-color 0.5s ease; /* Add the transition property */
-    position: relative; /* Set the position to relative for the pseudo-elements */
-    left: 600px;
-    overflow: hidden;
-}
+    header .In {
+        background-color: #FFEFD5;
+        color: black;
+        padding: 10px 15px;
+        text-decoration: none;
+        border-radius: 10px;
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        left: 50px;
+        overflow: hidden;
+    }
+    
+    header .In::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    header .In:hover {
+        background-color: #FFEFD5;
+    }
+    
+    header .In:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
 
-header .In::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    border-radius: 20px;
-    transition: transform 0.5s ease;
-    opacity: 0.1;
-}
-
-header .In:hover {
-    background-color: #FFEFD5;
-}
-
-header .In:hover::before {
-    transform: translate(-50%, -50%) scale(1);
+    .titulo {
+        display: none;
+    }
 }
