--- a/Administrativos/AdministrarTu/Asignar/Asignar.css
+++ b/Administrativos/AdministrarTu/Asignar/Asignar.css
@@ -1,225 +1,458 @@
-html{
-    height: 100%;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #FFEFD5;
-    margin: 0;
-    padding: 0;
-
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-}
-/*Estilo del contenedor principal (wrapper):*/
-.wrapper {
-    background-color: #ffffff;
-    padding: 15px;
-    margin: 15px;
-    border-radius: 5px;
-    clear: both;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-/*Estilo del encabezado (header):*/
-header {
-    background-color: #ffffff;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 0.1px solid #b6b6b6;
-}
-
-header h1 {
-    margin: 0;
-    font-size: 16px;
-    color: #000;
-}
-/*Estilo del botón de cierre de sesión (logout):*/
-header .logout {
-    background-color: #004494;
-    color: white;
-    padding: 10px 15px;
-    text-decoration: none;
-    border-radius: 10px;
-    transition: background-color 0.5s ease; /* Add the transition property */
-    position: relative; /* Set the position to relative for the pseudo-elements */
-    overflow: hidden;
-}
-
-header .logout::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    border-radius: 20px;
-    transition: transform 0.5s ease;
-    opacity: 0.1;
-}
-
-header .logout:hover {
-    background-color: #003B7A;
-}
-
-header .logout:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
-/*Estilo del contenedor (container):*/
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 0px;
-}
-/*Estilo del menú (menu):*/
-.menu {
-    display: flex;
-    flex-direction: column;
+@media (min-width: 768px) {
+    html{
+        height: 100%;
+    }
     
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #FFEFD5;
+        margin: 0;
+        padding: 0;
+    
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+    }
+    /*Estilo del contenedor principal (wrapper):*/
+    .wrapper {
+        background-color: #ffffff;
+        padding: 15px;
+        margin: 15px;
+        border-radius: 5px;
+        clear: both;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+    /*Estilo del encabezado (header):*/
+    header {
+        background-color: #ffffff;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 0.1px solid #b6b6b6;
+    }
+    
+    header h1 {
+        margin: 0;
+        font-size: 16px;
+        color: #000;
+    }
+    /*Estilo del botón de cierre de sesión (logout):*/
+    header .logout {
+        background-color: #004494;
+        color: white;
+        padding: 10px 15px;
+        text-decoration: none;
+        border-radius: 10px;
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        overflow: hidden;
+    }
+    
+    header .logout::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    header .logout:hover {
+        background-color: #003B7A;
+    }
+    
+    header .logout:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    /*Estilo del contenedor (container):*/
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 0px;
+    }
+    /*Estilo del menú (menu):*/
+    .menu {
+        display: flex;
+        flex-direction: column;
+        
+    }
+    
+    .menu button {
+        background-color: #004494;
+        color: white;
+        border: none;
+        padding: 35px 50px;
+        margin: 10px 0;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 10px;
+        text-align: center;
+    
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        overflow: hidden;
+    }
+    
+    .menu button::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    .menu button:hover {
+        background-color: #003B7A;
+    }
+    
+    .menu button:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    /*Estilo del logo:*/
+    .logo {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        /*Mover imagen derecha: margin-left: 890px;*/
+    }
+    
+    .logo img {
+        height: auto;
+        width: 200%;
+    }
+    
+    
+    header .In {
+        background-color: #FFEFD5;
+        color: black;
+        padding: 10px 15px;
+        text-decoration: none;
+        border-radius: 10px;
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        left: 600px;
+        overflow: hidden;
+    }
+    
+    header .In::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    header .In:hover {
+        background-color: #FFEFD5;
+    }
+    
+    header .In:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    
+    .outer-container {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        justify-content: center;
+        position: relative;
+    }
+    
+    .login-container {
+        border: 2px solid #fcac34;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 600px;
+        padding: 100px;
+        background: #ffe4b4;
+        border-radius: 15px;
+        margin-left: 500px;
+        margin-top: 150px;
+    }
+    
+    .login-form {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .login-form input[type="text"],
+    .login-form input[type="password"] {
+        width: 100%; /* Ajusta el ancho de los campos de entrada */
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #fcc45c;
+        border-radius: 5px;
+        background-color: #ffd48c;
+    }
+    
+    .login-form button {
+        width: 100%; /* Ajusta el ancho del botón */
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        background: #0056b3;
+        color: white;
+        cursor: pointer;
+        height: 40px;
+    }
+    
+    .login-form button:hover {
+        background: #004494;
+    }
 }
 
-.menu button {
-    background-color: #004494;
-    color: white;
-    border: none;
-    padding: 35px 50px;
-    margin: 10px 0;
-    font-size: 18px;
-    cursor: pointer;
-    border-radius: 10px;
-    text-align: center;
+@media (max-width: 767px) {
+    html{
+        height: 100%;
+    }
+    
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #FFEFD5;
+        margin: 0;
+        padding: 0;
+    
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+    }
+    /*Estilo del contenedor principal (wrapper):*/
+    .wrapper {
+        background-color: #ffffff;
+        padding: 15px;
+        margin: 15px;
+        border-radius: 5px;
+        clear: both;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+    }
+    /*Estilo del encabezado (header):*/
+    header {
+        background-color: #ffffff;
+        padding: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 0.1px solid #b6b6b6;
+    }
+    
+    header h1 {
+        margin: 0;
+        font-size: 16px;
+        color: #000;
+    }
+    /*Estilo del botón de cierre de sesión (logout):*/
+    header .logout {
+        background-color: #004494;
+        color: white;
+        padding: 10px 15px;
+        text-decoration: none;
+        border-radius: 10px;
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        overflow: hidden;
+    }
+    
+    header .logout::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    header .logout:hover {
+        background-color: #003B7A;
+    }
+    
+    header .logout:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    /*Estilo del contenedor (container):*/
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        padding: 0px;
+    }
+    /*Estilo del menú (menu):*/
+    .menu {
+        display: flex;
+        flex-direction: column;
+        
+    }
+    
+    .menu button {
+        background-color: #004494;
+        color: white;
+        border: none;
+        padding: 35px 50px;
+        margin: 10px 0;
+        font-size: 18px;
+        cursor: pointer;
+        border-radius: 10px;
+        text-align: center;
+    
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        overflow: hidden;
+    }
+    
+    .menu button::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    .menu button:hover {
+        background-color: #003B7A;
+    }
+    
+    .menu button:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    /*Estilo del logo:*/
+    .logo {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        /*Mover imagen derecha: margin-left: 890px;*/
+    }
+    
+    .logo img {
+        height: auto;
+        width: 200%;
+    }
+    
+    
+    header .In {
+        background-color: #FFEFD5;
+        color: black;
+        padding: 10px 15px;
+        text-decoration: none;
+        border-radius: 10px;
+        transition: background-color 0.5s ease; /* Add the transition property */
+        position: relative; /* Set the position to relative for the pseudo-elements */
+        left: 50px;
+        overflow: hidden;
+    }
+    
+    header .In::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        border-radius: 20px;
+        transition: transform 0.5s ease;
+        opacity: 0.1;
+    }
+    
+    header .In:hover {
+        background-color: #FFEFD5;
+    }
+    
+    header .In:hover::before {
+        transform: translate(-50%, -50%) scale(1);
+    }
+    
+    .outer-container {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        justify-content: center;
+        position: relative;
+    }
+    
+    .login-container {
+        border: 2px solid #fcac34;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 600px;
+        padding: 100px;
+        background: #ffe4b4;
+        border-radius: 15px;
+        margin-top: 20px;
+    }
+    
+    .login-form {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .login-form input[type="text"],
+    .login-form input[type="password"] {
+        width: 100%; /* Ajusta el ancho de los campos de entrada */
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #fcc45c;
+        border-radius: 5px;
+        background-color: #ffd48c;
+    }
+    
+    .login-form button {
+        width: 100%; /* Ajusta el ancho del botón */
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        background: #0056b3;
+        color: white;
+        cursor: pointer;
+        height: 40px;
+    }
+    
+    .login-form button:hover {
+        background: #004494;
+    }
 
-    transition: background-color 0.5s ease; /* Add the transition property */
-    position: relative; /* Set the position to relative for the pseudo-elements */
-    overflow: hidden;
-}
-
-.menu button::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    border-radius: 20px;
-    transition: transform 0.5s ease;
-    opacity: 0.1;
-}
-
-.menu button:hover {
-    background-color: #003B7A;
-}
-
-.menu button:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
-/*Estilo del logo:*/
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    /*Mover imagen derecha: margin-left: 890px;*/
-}
-
-.logo img {
-    height: auto;
-    width: 200%;
-}
-
-
-header .In {
-    background-color: #FFEFD5;
-    color: black;
-    padding: 10px 15px;
-    text-decoration: none;
-    border-radius: 10px;
-    transition: background-color 0.5s ease; /* Add the transition property */
-    position: relative; /* Set the position to relative for the pseudo-elements */
-    left: 600px;
-    overflow: hidden;
-}
-
-header .In::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    border-radius: 20px;
-    transition: transform 0.5s ease;
-    opacity: 0.1;
-}
-
-header .In:hover {
-    background-color: #FFEFD5;
-}
-
-header .In:hover::before {
-    transform: translate(-50%, -50%) scale(1);
-}
-
-.outer-container {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    justify-content: center;
-    position: relative;
-}
-
-.login-container {
-    border: 2px solid #fcac34;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 600px;
-    padding: 100px;
-    background: #ffe4b4;
-    border-radius: 15px;
-    margin-left: 500px;
-    margin-top: 150px;
-}
-
-.login-form {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.login-form input[type="text"],
-.login-form input[type="password"] {
-    width: 100%; /* Ajusta el ancho de los campos de entrada */
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #fcc45c;
-    border-radius: 5px;
-    background-color: #ffd48c;
-}
-
-.login-form button {
-    width: 100%; /* Ajusta el ancho del botón */
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background: #0056b3;
-    color: white;
-    cursor: pointer;
-    height: 40px;
-}
-
-.login-form button:hover {
-    background: #004494;
+    .titulo{
+        display: none;
+    }
 }
